<resources>
    <string name="app_name">CEG Gym And Health Tip App</string>
    <string name="button_send1">Call</string>
    <string name="button_send2">Schedule</string>
    <string name="button_send3">Workout</string>
    <string name="button_send4">Mode</string>
    <string name="button_send5">Tips</string>
    <string name="button_send50">Feedback</string>
    <string name="button_send6">Punch Me</string>
    <string name="button_send01">Chest</string>
    <string name="button_send02">Shoulder</string>
    <string name="button_send03">Lats</string>
    <string name="button_send04">Triceps</string>
    <string name="button_send05">Biceps</string>
    <string name="button_send06">Squats</string>
    <string name="button_send8">BMI</string>
    <string name="button_send9">Calculate:></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MyActivity</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="log_name">login</string>
    <string name="edit_message">Enter Weight!!</string>
    <string name="edit_Text1">Enter Weight in kg!!</string>
    <string name="edit_Text2">Enter Height in meters!!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="title_activity_display_workout">DisplayWorkoutActivity</string>
    <string name="title_activity_bi">BiActivity</string>
    <string name="title_activity_welcome">MainPageActivity</string>
    <string name="title_activity_login_activity1">LoginActivity1</string>
    <string name="title_activity_chest">ChestActivity</string>
    <string name="title_activity_shoulder">ShoulderActivity</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="title_activity_lats">LatsActivity</string>
    <string name="title_activity_bmi">BmiActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_triceps">TricepsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_sign_up">SignupActivity</string>
    <string name="title_activity_mainpage">MainpageActivity</string>
    <string name="title_activity_biceps">BicepsActivity</string>
    <string name="price1">$200</string>
    <string name="price2">$150</string>
    <string name="price3">$20</string>
    <string name="price4">$100</string>
    <string name="price5">$130</string>
    <string name="price6">$35</string>
    <string name="price7">$80</string>
    <string name="price8">$190</string>
    <string name="price9">$67</string>
    <string name="price10">Soon Possible</string>
    <string name="title_activity_squats">SquatsActivity</string>
    <string name="compose_email">compose mail</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_phone">PhoneActivity</string>
    <string name="fontFamily__roboto_regular">sans-serif</string>
    <string name="fontFamily__roboto_light">sans-serif-light</string>
    <string name="fontFamily__roboto_condensed">sans-serif-condensed</string>
    <string name="fontFamily__roboto_medium">sans-serif-medium</string>
    <string name="fontFamily__roboto_black">sans-serif-black</string>
    <string name="fontFamily__roboto_condensed_light">sans-serif-condensed-light</string>
    <string name="title_activity_mode">ModeActivity</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="timerMs">00:00:00</string>
    <string name="timer">00:00:00</string>
    <string name="startText">start</string>
    <string name="resetText">reset</string>
    <string name="stopText">stop</string>
    <string name="backgroundText">Timer</string>
    <string name="adsText">Ads Go Here</string>
    <string name="off">Not to specify (office use)</string>
    <string name="title_activity_blind">Blind</string>
    <string name="title_activity_speechworkout">Speechworkout</string>
    <string name="title_activity_welcome2">Welcome2</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_workout_screen">WorkoutScreen</string>
    <string name="title_activity_timering">Timering</string>
    <string name="action_settings1">Logout</string>
    <string name="title_activity_loggingout">Loggingout</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="hint">Remainder</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
</resources>
