<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/mainnn">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_weight="4"
        android:textColor="#aa22bb"
        android:text="@string/button_send1"
        android:onClick="sendCall"
        android:background="@drawable/roundedbutton"    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_weight="4"
        android:textColor="#aa22bb"
        android:text="@string/button_send2"
        android:onClick="sendSchedule"

        android:background="@drawable/roundedbutton"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-150dp"
        android:layout_marginTop="350dp"
        android:layout_weight="5"
        android:text="@string/button_send3"
        android:textColor="#aa22bb"
        android:onClick="sendWorkout"
        android:background="@drawable/roundedbutton"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="350dp"
        android:layout_weight="4"
        android:text="@string/button_send8"
        android:textColor="#aa22bb"
        android:onClick="sendBmi"
        android:background="@drawable/roundedbutton"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-10dp"
        android:layout_marginTop="200dp"
        android:layout_weight="4"
        android:text="@string/button_send4"
        android:textColor="#aa22bb"
        android:onClick="sendMode"
        android:id="@+id/buttonmode"
        android:background="@drawable/roundedbutton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/button"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="200dp"
        android:layout_weight="4"
        android:text="@string/button_send5"
        android:textColor="#aa22bb"
        android:background="@drawable/roundedbutton"/>
    <Button
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:id="@id/button"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="400dp"
        android:text="@string/button_send50"
        android:layout_weight="1"
        android:textColor="#aa22bb"
        android:onClick="sendMail"
        android:background="@drawable/roundedbutton"/>

</LinearLayout>
