<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="right"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:id="@+id/not"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/notification2">


        <TextView
            android:layout_width="350dp"
            android:layout_height="181dp"
            android:textColor="#F70929"
            android:textSize="50dp"
            android:text="  Today's workout Supplements" />

        <ImageView
            android:layout_width="450dp"
            android:layout_height="400dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pro1"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textColor="#ffffff"
            android:layout_marginLeft="100dp"
            android:textSize="50dp"
            android:text="@string/price1"
            />

        <ImageView
            android:layout_width="450dp"
            android:layout_height="400dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pro2"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="100dp"
            android:textColor="#ffffff"
            android:textSize="50dp"
            android:text="@string/price2"
            />

        <ImageView
            android:layout_width="450dp"
            android:layout_height="400dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pro3"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="100dp"
            android:textColor="#ffffff"
            android:textSize="50dp"
            android:text="@string/price3"
            />
        <ImageView
            android:layout_width="450dp"
            android:layout_height="400dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pro4"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="100dp"
            android:textColor="#ffffff"
            android:textSize="50dp"
            android:text="@string/price4"
            />
        <ImageView
            android:layout_width="450dp"
            android:layout_height="400dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pro5"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="100dp"
            android:textColor="#ffffff"
            android:textSize="50dp"
            android:text="@string/price5"
            />
        <ImageView
            android:layout_width="450dp"
            android:layout_height="400dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pro6"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="100dp"
            android:textColor="#ffffff"
            android:textSize="50dp"
            android:text="@string/price6"
            />
        <ImageView
            android:layout_width="450dp"
            android:layout_height="400dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pro7"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="100dp"
            android:textColor="#ffffff"
            android:textSize="50dp"
            android:text="@string/price7"
            />
        <ImageView
            android:layout_width="450dp"
            android:layout_height="400dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pro8"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="100dp"
            android:textColor="#ffffff"
            android:textSize="50dp"
            android:text="@string/price8"
            />
        <ImageView
            android:layout_width="450dp"
            android:layout_height="400dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pro9"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="100dp"
            android:textColor="#ffffff"
            android:textSize="50dp"
            android:text="@string/price9"
            />
        <ImageView
            android:layout_width="450dp"
            android:layout_height="400dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pro10"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textColor="#ffffff"
            android:layout_marginLeft="100dp"
            android:textSize="50dp"
            android:text="@string/price10"
            />

    </LinearLayout>

</ScrollView>